used local storage

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <ul>
         <li><i class="fas fa-mouse-pointer"></i> : Complete</li>
         <li>
-          <i class="fas fa-mouse-pointer"></i
+          <i class="fas fa-level-up-alt"></i
           ><i class="fas fa-mouse-pointer"></i> : Priority
         </li>
       </ul>
@@ -35,9 +35,12 @@
             <input type="submit" class="btn btn-dark" value="Submit" />
           </div>
         </form>
+
         <ul class="todos" id="todos"></ul>
       </div>
+      <button class="btn btn-dark" id="clear">Clear All</button>
     </div>
+
     <script src="script.js"></script>
   </body>
 </html>
